Fix T40422: EdgeSlide works incorrectly with boundry edges